--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -3,7 +3,7 @@ name: Deploy Resume with GitHub Pages dependencies preinstalled
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["workflows"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
